--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Cygni recruitment</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat"
@@ -9,12 +12,23 @@
     />
   </head>
   <body>
-    <!-- Main content -->
-    <div class="main">
-      <!-- Main title -->
-      <h1>Flickr Galleradjnajksdny</h1>
-    </div>
+    <nav>
+      <form class="searchForm" action="">
+        <input
+          class="searchInput"
+          type="text"
+          placeholder="what are you looking for?"
+        />
+        <button class="search" type="submit"><span>Search</span></button>
+      </form>
+      <div class="time"></div>
+    </nav>
 
-    <script type="text/javascript" src="./scripts/index.js"></script>
+    <section class="gallery">
+      <div class="load"></div>
+      <ul></ul>
+    </section>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
