--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
           class="searchInput"
           type="text"
           placeholder="what are you looking for?"
+          value="Nature"
         />
         <button class="search" type="submit"><span>Search</span></button>
       </form>
