--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <body>
     <nav>
       <form class="searchForm" action="">
+        <h1>This is my Flickr app</h1>
         <input
           class="searchInput"
           type="text"
