--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           class="searchInput"
           type="text"
           placeholder="what are you looking for?"
-          value="Nature"
+          value="Blue mountains"
         />
         <button class="search" type="submit"><span>Search</span></button>
       </form>
