--- a/src/index.html
+++ b/src/index.html
@@ -7,30 +7,51 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat"
+      href="https://fonts.googleapis.com/css?family=Montserrat|Caveat"
       rel="stylesheet"
     />
   </head>
   <body>
-    <nav>
-      <form class="searchForm" action="">
-        <h1>This is my Flickr app</h1>
-        <input
-          class="searchInput"
-          type="text"
-          placeholder="what are you looking for?"
-          value="Blue mountains"
-        />
-        <button class="search" type="submit"><span>Search</span></button>
-      </form>
-      <div class="time"></div>
-    </nav>
-
-    <section class="gallery">
-      <div class="load"></div>
-      <ul></ul>
-    </section>
-
+    <div class="time"></div>
+    <h1 class="main-title">Welcome to my Flickr website!</h1>
+    <div class="explainer-container">
+      <p class="explainer">
+        Klicka på fältet nedan och sök på valfri kategori! :)
+      </p>
+      <img class="arrow" src="img/arrow.png" />
+    </div>
+    <form class="searchForm" action="">
+      <!-- Clearfix div -->
+      <div class="clearfix">
+        <div class="input-container">
+          <div class="input-button-wrapper">
+            <input
+              class="searchInput"
+              type="text"
+              placeholder="Sök efter något kul! :)"
+              value="Sunny beaches"
+            />
+            <button class="search" type="submit">
+              <img src="./img/search.svg" width="100%" alt="search-icon" />
+            </button>
+          </div>
+        </div>
+      </div>
+    </form>
+    <!-- Start main-content -->
+    <div class="main-content">
+      <!-- Start gallery-container -->
+      <div class="gallery-container">
+        <section class="gallery">
+          <!-- Loading gif container -->
+          <div class="load"></div>
+          <!-- List where photos get appended to -->
+          <ul></ul>
+        </section>
+      </div>
+      <!-- End gallery-container-->
+    </div>
+    <!-- End main-content-->
     <script src="./js/main.js"></script>
   </body>
 </html>
